--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DH Walk </title>
+    <title>APTIV |Weekly Headcount DH Walk </title>
+    <link rel="icon" href="./src/Components/assets/favicon-32x32.png" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
